cases = [
  ['t0300a', [compile_exe, disassemble_exe]],
  ['t0302a', [compile_exe, disassemble_exe]],
  ['t0303a', [compile_exe, disassemble_exe]],
  ['t0304a', [compile_exe, disassemble_exe]],
  ['t0305a', [compile_exe, disassemble_exe]],
  ['t0306a', [compile_exe, disassemble_exe]],
  ['t0307a', [compile_exe, disassemble_exe]],
  ['t0308a', [compile_exe, disassemble_exe]],
  ['t0309a', [compile_exe, disassemble_exe]],
  ['t0310a', [compile_exe, disassemble_exe]],
  ['t0311a', [compile_exe, disassemble_exe]],
  ['t0312a', [compile_exe, disassemble_exe]],
  ['t0313a', [compile_exe, disassemble_exe]],
  ['t0314a', [compile_exe, disassemble_exe]],
  ['t0315a', [compile_exe]],
  ['t0316a', [compile_exe, disassemble_exe]],
  ['t0317a', [compile_exe]],
  ['t0318a', [compile_exe, disassemble_exe]],
  ['t0319a', [pretty_exe]],
  ['t0320a', [compile_exe, disassemble_exe]],
  ['t0321a', [compile_exe, disassemble_exe]],
  ['t0322a', [compile_exe, disassemble_exe]],
  ['t0323a', [pretty_exe]],
  ['t0324a', [compile_exe]],
  ['t0325a', [compile_exe]],
  ['t0326a', [compile_exe]],
  ['t0327a', [compile_exe, disassemble_exe]],
  ['t0328a', [compile_exe, disassemble_exe]],
  ['t0329a', [compile_exe, disassemble_exe]],
  ['t0330a', [compile_exe, disassemble_exe]],
  ['t0331a', [compile_exe, disassemble_exe]],
  ['t0332a', [compile_exe, disassemble_exe]],
  ['t0333a', [compile_exe, disassemble_exe]],
  ['t0334a', [compile_exe, disassemble_exe]],
  ['t0335a', [compile_exe, disassemble_exe]],
  ['t0336a', [compile_exe, disassemble_exe]],
  ['t0337a', [compile_exe, disassemble_exe]],
  ['t0338a', [compile_exe, disassemble_exe]],
  ['t0339a', [compile_exe, disassemble_exe]],
  ['t0340a', [compile_exe, disassemble_exe]],
  ['t0341a', [compile_exe, disassemble_exe]],
  ['t0342a', [compile_exe, disassemble_exe]],
  ['t0343a', [compile_exe, disassemble_exe]],
  ['t0344a', [compile_exe, disassemble_exe]],
  ['t0345a', [compile_exe, disassemble_exe]],
  ['t0346a', [compile_exe, disassemble_exe]],
  ['t0347a', [compile_exe, disassemble_exe]],
  ['t0348a', [compile_exe, disassemble_exe]],
  ['t0349a', [compile_exe, disassemble_exe]],
  ['t0350a', [compile_exe, disassemble_exe]],
  ['t0351a', [compile_exe, disassemble_exe]],
  ['t0352a', [compile_exe, disassemble_exe]],
  ['t0355a', [compile_exe, disassemble_exe]],
  ['t0356a', [compile_exe, disassemble_exe]],
  ['t0357a', [compile_exe, disassemble_exe]],
  ['t0358a', [compile_exe, disassemble_exe]],
  ['t0359a', [compile_exe, disassemble_exe]],
  ['t0360a', [compile_exe, disassemble_exe]],
  ['t0361a', [compile_exe, disassemble_exe]],
  ['t0362a', [compile_exe, disassemble_exe]],
  ['t0363a', [compile_exe, disassemble_exe]],
  ['t0365a', [compile_exe, disassemble_exe]],
  ['t0366a', [compile_exe, disassemble_exe]],
  ['t0367a', [compile_exe, disassemble_exe]],
  ['t0368a', [pretty_exe]],
  ['t0369a', [compile_exe, disassemble_exe]],
  ['t0372a', [compile_exe]],
  ['t0373a', [compile_exe, disassemble_exe]],
  ['t0375a', [compile_exe, disassemble_exe]],
  ['t0376a', [compile_exe]],
  ['t0377a', [compile_exe, disassemble_exe]],
  ['t0378a', [compile_exe, disassemble_exe]],
  ['t0379a', [compile_exe, disassemble_exe]],
  ['t0380a', [compile_exe, disassemble_exe]],
  ['t0381a', [compile_exe]],
  ['t0382a', [compile_exe]],
  ['t0383a', [compile_exe, disassemble_exe]],
  ['t0385a', [compile_exe, disassemble_exe]],
  ['t0386a', [compile_exe]],
  ['t0387a', [compile_exe, disassemble_exe]],
  ['t0388a', [compile_exe, disassemble_exe]],
  ['t0389a', [compile_exe, disassemble_exe]],
  ['t0390a', [compile_exe]],
  ['t0391a', [compile_exe, disassemble_exe]],
  ['t0392a', [compile_exe]],
  ['t0395a', [compile_exe]],
  ['t0396a', [compile_exe, disassemble_exe]],
  ['t0397a', [compile_exe]],
  ['t0398a', [compile_exe]],
  ['t0399a', [compile_exe, disassemble_exe]],
]

foreach case : cases
  name = case[0]
  depends = case[1]
  test(name, sh, args : files(name + '.sh'), env : test_env, depends : depends)
endforeach
