test('t0500a', sh, args : files('t0500a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0501a', sh, args : files('t0501a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0502a', sh, args : files('t0502a.sh'), env : test_env, depends : [compile_exe,])
test('t0503a', sh, args : files('t0503a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0505a', sh, args : files('t0505a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0506a', sh, args : files('t0506a.sh'), env : test_env, depends : [compile_exe,])
test('t0507a', sh, args : files('t0507a.sh'), env : test_env, depends : [compile_exe,])
test('t0508a', sh, args : files('t0508a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0509a', sh, args : files('t0509a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0511a', sh, args : files('t0511a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0512a', sh, args : files('t0512a.sh'), env : test_env, depends : [compile_exe,])
test('t0513a', sh, args : files('t0513a.sh'), env : test_env, depends : [compile_exe,])
test('t0515a', sh, args : files('t0515a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0516a', sh, args : files('t0516a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0517a', sh, args : files('t0517a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0518a', sh, args : files('t0518a.sh'), env : test_env, depends : [compile_exe,])
test('t0519a', sh, args : files('t0519a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0520a', sh, args : files('t0520a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0521a', sh, args : files('t0521a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0522a', sh, args : files('t0522a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0523a', sh, args : files('t0523a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0525a', sh, args : files('t0525a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0526a', sh, args : files('t0526a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0527a', sh, args : files('t0527a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0528a', sh, args : files('t0528a.sh'), env : test_env, depends : [assemble_exe, disassemble_exe,])
test('t0529a', sh, args : files('t0529a.sh'), env : test_env, depends : [assemble_exe, disassemble_exe,])
test('t0530a', sh, args : files('t0530a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0531a', sh, args : files('t0531a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0532a', sh, args : files('t0532a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0533a', sh, args : files('t0533a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0534a', sh, args : files('t0534a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0535a', sh, args : files('t0535a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0536a', sh, args : files('t0536a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0537a', sh, args : files('t0537a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0539a', sh, args : files('t0539a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0540a', sh, args : files('t0540a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0541a', sh, args : files('t0541a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0542a', sh, args : files('t0542a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0543a', sh, args : files('t0543a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0544a', sh, args : files('t0544a.sh'), env : test_env, depends : [compile_exe,])
test('t0545a', sh, args : files('t0545a.sh'), env : test_env, depends : [compile_exe,])
test('t0546a', sh, args : files('t0546a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0547a', sh, args : files('t0547a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0548a', sh, args : files('t0548a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0549a', sh, args : files('t0549a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0551a', sh, args : files('t0551a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0552a', sh, args : files('t0552a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0553a', sh, args : files('t0553a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0555a', sh, args : files('t0555a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0556a', sh, args : files('t0556a.sh'), env : test_env, depends : [compile_exe,])
test('t0557a', sh, args : files('t0557a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0558a', sh, args : files('t0558a.sh'), env : test_env, depends : [compile_exe,])
test('t0559a', sh, args : files('t0559a.sh'), env : test_env, depends : [compile_exe, libmap_exe, librarian_exe,])
test('t0560a', sh, args : files('t0560a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0562a', sh, args : files('t0562a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0563a', sh, args : files('t0563a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0564a', sh, args : files('t0564a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0565a', sh, args : files('t0565a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0566a', sh, args : files('t0566a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0567a', sh, args : files('t0567a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0568a', sh, args : files('t0568a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0569a', sh, args : files('t0569a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0570a', sh, args : files('t0570a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0571a', sh, args : files('t0571a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0572a', sh, args : files('t0572a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0573a', sh, args : files('t0573a.sh'), env : test_env, depends : [compile_exe,])
test('t0574a', sh, args : files('t0574a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0575a', sh, args : files('t0575a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0576a', sh, args : files('t0576a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0577a', sh, args : files('t0577a.sh'), env : test_env, depends : [compile_exe,])
test('t0578a', sh, args : files('t0578a.sh'), env : test_env, depends : [compile_exe,])
test('t0579a', sh, args : files('t0579a.sh'), env : test_env, depends : [compile_exe,])
test('t0580a', sh, args : files('t0580a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0581a', sh, args : files('t0581a.sh'), env : test_env, depends : [downcase_exe,])
test('t0582a', sh, args : files('t0582a.sh'), env : test_env, depends : [downcase_exe,])
test('t0583a', sh, args : files('t0583a.sh'), env : test_env, depends : [setup_exe,])
test('t0584a', sh, args : files('t0584a.sh'), env : test_env, depends : [setup_exe,])
test('t0585a', sh, args : files('t0585a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0586a', sh, args : files('t0586a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0587a', sh, args : files('t0587a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0589a', sh, args : files('t0589a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0591a', sh, args : files('t0591a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0592a', sh, args : files('t0592a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0594a', sh, args : files('t0594a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0595a', sh, args : files('t0595a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0596a', sh, args : files('t0596a.sh'), env : test_env, depends : [compile_exe,])
test('t0597a', sh, args : files('t0597a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0598a', sh, args : files('t0598a.sh'), env : test_env, depends : [compile_exe,])
test('t0599a', sh, args : files('t0599a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
