cases = [
  ['t0600a', [compile_exe]],
  ['t0601a', [compile_exe, disassemble_exe]],
  ['t0602a', [compile_exe, disassemble_exe]],
  ['t0603a', [compile_exe, disassemble_exe]],
  ['t0604a', [compile_exe, disassemble_exe]],
  ['t0605a', [compile_exe, disassemble_exe]],
  ['t0606a', [test_long_integer_exe]],
  ['t0607a', [test_long_integer_exe]],
  ['t0608a', [test_long_integer_exe]],
  ['t0609a', [test_long_integer_exe]],
  ['t0610a', [test_long_integer_exe]],
  ['t0611a', [compile_exe, disassemble_exe]],
  ['t0612a', [compile_exe, disassemble_exe]],
  ['t0613a', [compile_exe]],
  ['t0614a', [compile_exe, disassemble_exe]],
  ['t0615a', [compile_exe, disassemble_exe]],
  ['t0616a', [compile_exe, disassemble_exe]],
  ['t0617a', [compile_exe, disassemble_exe]],
  ['t0618a', [compile_exe, disassemble_exe]],
  ['t0619a', [compile_exe]],
  ['t0620a', [compile_exe, disassemble_exe]],
  ['t0621a', [pretty_exe]],
  ['t0622a', [compile_exe, disassemble_exe]],
  ['t0624a', [compile_exe, disassemble_exe]],
  ['t0625a', [compile_exe, disassemble_exe]],
  ['t0626a', [compile_exe]],
  ['t0627a', [compile_exe]],
  ['t0628a', [compile_exe, disassemble_exe]],
  ['t0629a', [compile_exe, disassemble_exe]],
  ['t0630a', [compile_exe, disassemble_exe]],
  ['t0631a', [compile_exe, disassemble_exe]],
  ['t0632a', [compile_exe, disassemble_exe]],
  ['t0633a', [compile_exe, disassemble_exe]],
  ['t0634a', [compile_exe, disassemble_exe]],
  ['t0635a', [compile_exe, disassemble_exe]],
  ['t0636a', [compile_exe, disassemble_exe]],
  ['t0637a', [compile_exe, disassemble_exe]],
  ['t0638a', [compile_exe, disassemble_exe]],
  ['t0639a', [compile_exe, disassemble_exe]],
  ['t0640a', [compile_exe, disassemble_exe]],
  ['t0641a', [compile_exe, disassemble_exe]],
  ['t0642a', [compile_exe, disassemble_exe]],
  ['t0643a', [compile_exe, disassemble_exe]],
  ['t0644a', [compile_exe, disassemble_exe]],
  ['t0645a', [pretty_exe]],
  ['t0646a', [littoral_exe]],
  ['t0647a', [littoral_exe]],
  ['t0648a', [littoral_exe]],
  ['t0649a', [littoral_exe]],
  ['t0650a', [assemble_exe, disassemble_exe]],
  ['t0651a', [assemble_exe, disassemble_exe]],
  ['t0652a', [assemble_exe, disassemble_exe]],
  ['t0653a', [assemble_exe, disassemble_exe]],
  ['t0654a', [assemble_exe, disassemble_exe]],
  ['t0655a', [assemble_exe, disassemble_exe]],
  ['t0656a', [assemble_exe, disassemble_exe]],
  ['t0657a', [assemble_exe, disassemble_exe]],
  ['t0658a', [assemble_exe, disassemble_exe]],
  ['t0659a', [assemble_exe, disassemble_exe]],
  ['t0660a', [assemble_exe, disassemble_exe]],
  ['t0661a', [assemble_exe, disassemble_exe]],
  ['t0662a', [assemble_exe, disassemble_exe]],
  ['t0663a', [compile_exe, disassemble_exe]],
  ['t0664a', [assemble_exe, disassemble_exe]],
  ['t0665a', [littoral_exe]],
  ['t0666a', [compile_exe, disassemble_exe]],
  ['t0667a', [compile_exe, librarian_exe, osmakgen_exe]],
  ['t0668a', [compile_exe, libmap_exe, librarian_exe]],
  ['t0669a', [compile_exe, libmap_exe, librarian_exe]],
  ['t0670a', [compile_exe, librarian_exe, osmakgen_exe]],
  ['t0671a', [depends_exe]],
  ['t0672a', [compile_exe, osmakgen_exe]],
  ['t0673a', [assemble_exe, compile_exe, osmakgen_exe]],
  ['t0674a', [compile_exe, osmakgen_exe, setup_exe]],
  ['t0675a', [compile_exe, osmakgen_exe]],
  ['t0676a', [compile_exe, librarian_exe, osmakgen_exe]],
  ['t0677a', [opcodes_exe]],
  ['t0678a', [errors_exe]],
  ['t0679a', [compile_exe, errors_exe, librarian_exe, opcodes_exe, osmakgen_exe]],
  ['t0680a', [setup_exe]],
  ['t0681a', [assemble_exe, disassemble_exe]],
  ['t0682a', [compile_exe, disassemble_exe]],
  ['t0683a', [compile_exe, disassemble_exe]],
  ['t0684a', [assemble_exe, compile_exe, disassemble_exe, link_exe]],
  ['t0686a', [depends_exe]],
  ['t0687a', [assemble_exe, compile_exe, osmakgen_exe]],
  ['t0688a', [compile_exe, disassemble_exe]],
  ['t0689a', [compile_exe, disassemble_exe]],
  ['t0690a', [compile_exe, disassemble_exe, libmap_exe]],
  ['t0691a', [assemble_exe, disassemble_exe]],
  ['t0692a', [assemble_exe, disassemble_exe]],
  ['t0693a', [compile_exe, disassemble_exe, libmap_exe]],
  ['t0694a', [assemble_exe, disassemble_exe]],
  ['t0695a', [assemble_exe, disassemble_exe]],
  ['t0696a', [assemble_exe, compile_exe, disassemble_exe, link_exe]],
  ['t0697a', [assemble_exe, disassemble_exe]],
  ['t0698a', [assemble_exe, disassemble_exe]],
  ['t0699a', [assemble_exe, disassemble_exe]],
]

foreach case : cases
  name = case[0]
  depends = case[1]
  test(name, sh, args : files(name + '.sh'), env : test_env, depends : depends)
endforeach
